# SpaceSim

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: camera.hpp  constants.hpp  mesh.hpp  models.hpp  opengl_fwd.hpp  read_file_to_string.hpp  shaders.hpp  state.hpp  transform.hpp
shaders/basic/: basic.frag  basic.vert  triangle.frag  triangle.vert
shaders/sphere/: sphere.frag  sphere.vert
src/: camera.cpp  main.cpp  mesh.cpp  models.cpp  shaders.cpp  state.cpp  transform.cpp
